--- a/package.xml
+++ b/package.xml
@@ -62,6 +62,8 @@
   <exec_depend>python-setuptools</exec_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <depend>sensor_msgs</depend>
+  <depend>trajectory_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
